add_executable(coolc main.cpp
        lexer/lexer.hpp
        compiler.cpp
        compilation_result.hpp
        lexer/lexer.cpp
        ast/expr.hpp
        ast/stmt.hpp
        parser/parser.hpp
        parser/parser.cpp
        ast/expr.cpp
        ast/stmt.cpp
        parser/parse_error.hpp
        analysis/scope.hpp
        analysis/type.hpp
        analysis/scope.cpp
        analysis/type.cpp
        ast/ast_printer.hpp
        ast/ast_printer.cpp
)
